fix: provide proper exception on cursor decode
Returns an exception pointing to invalid input when decoding an invalid cursor.
In general, cursor implementations return proper exceptions on decode and encode instead of returning a generic runtime exception.